fixed blockquote color for dark mode

--- a/assets/sass/noesya-hugo/_style.sass
+++ b/assets/sass/noesya-hugo/_style.sass
@@ -232,7 +232,8 @@ footer#document-footer
         background: black
         color: white
     body,
-    a, .link
+    a, .link,
+    .block-testimonials blockquote p
         color: white
     header#document-header nav .logo 
         color: white
